<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.pep.android.uplay.LocalMusic">

    <LinearLayout
        android:id="@+id/st_bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/st_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_st"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/st_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_desc"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <!-- Local Library bar: LinearLayout horizontal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_bar"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/st_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/st_star"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/jcole"
                android:scaleType="centerCrop"/>
        </LinearLayout>

        <!-- Now Playing bar: LinearLayout horizontal -->L
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/description">

            <TextView
                android:id="@+id/text_st"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_jcole"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/buy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/buy_bar_st"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buy_button"
                android:onClick="buyTransaction"
                android:background="@drawable/ic_payment_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
