<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.pep.android.uplay.LocalMusic">

    <LinearLayout
        android:id="@+id/bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/np_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_np"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/np_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/np_desc"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/lm_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/lm_star"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/paramore"
                android:scaleType="centerCrop"/>
        </LinearLayout>

        <!-- Now Playing bar: LinearLayout horizontal -->L
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/description"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/text_lm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_desc"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/np_bar_lm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_bar"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/np_button"
                android:onClick="createPlayer"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_play_circle_outline_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
