<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pep.android.uplay.MainActivity"
    tools:showIn="@layout/activity_main"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:id="@+id/bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/home_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/home_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_desc"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <!-- Local Library bar: LinearLayout horizontal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lm_bar"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/lm_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/lm_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/metallica"
                android:layout_marginRight="8dp"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:onClick="songClick"/>

            <ImageView
                android:id="@+id/lm_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/paramore"
                android:layout_marginRight="8dp"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:onClick="songClick"/>

            <ImageView
                android:id="@+id/lm_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/jcole"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:onClick="songClick"/>

        </LinearLayout>

        <!-- Store bar: LinearLayout horizontal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_bar"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/st_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/st_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/paramore"
                android:layout_marginRight="8dp"
                android:scaleType="centerCrop"
                android:onClick="songClick"/>

            <ImageView
                android:id="@+id/st_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/jcole"
                android:layout_marginRight="8dp"
                android:scaleType="centerCrop"
                android:onClick="songClick"/>

            <ImageView
                android:id="@+id/st_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/metallica"
                android:scaleType="centerCrop"
                android:onClick="songClick"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
